--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,17 @@ h1 {
   background: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.card {
+  background-color: rgb(211, 121, 161);
+  padding: 5px;
+  border-radius: 10%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  color: white;
+}
